--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,49 @@
-# Node modules
+# =============================
+# NODE MODULES & ENV FILES
+# =============================
 node_modules/
-
-# Environment variables
 .env
 
-# Upload folders (Railway không lưu file nên bỏ qua khi commit)
-public/uploads/*
-!public/uploads/.gitkeep
-!public/uploads/videos/.gitkeep
-!public/uploads/lesson_materials/.gitkeep
-!public/uploads/thumbnails/.gitkeep
-!public/uploads/assignments/.gitkeep
+# =============================
+# UPLOADS – CHỈ IGNORE FILE NẶNG
+# Allow ALL images except videos
+# =============================
 
+# Ignore ONLY videos folder (vì file nặng)
+public/uploads/videos/
 
-# Logs
+# Ignore large documents (nếu có)
+public/uploads/lesson_materials/
+public/uploads/materials/
+public/uploads/assignments/
+
+# Allow all image folders (KHÔNG ignore)
+!public/uploads/
+!public/uploads/avatars/
+!public/uploads/blog/
+!public/uploads/certificates/
+!public/uploads/course-thumbnails/
+!public/uploads/thumbnails/
+!public/uploads/*/*.jpg
+!public/uploads/*/*.png
+!public/uploads/*/*.jpeg
+!public/uploads/*/*.webp
+
+# =============================
+# LOG FILES
+# =============================
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 pnpm-debug.log
 
-# System files
+# =============================
+# SYSTEM FILES
+# =============================
 .DS_Store
 Thumbs.db
 
-# Optional: VSCode settings (nếu không muốn commit)
+# =============================
+# EDITOR SETTINGS (optional)
+# =============================
 .vscode/
